--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "devDependencies": {
     "@types/node": "^24.10.0",
     "@types/webpack": "^4.41.22",
-    "@vitejs/plugin-vue2": "^2.3.4",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.1",
     "css-loader": "^4.3.0",
@@ -27,12 +26,12 @@
     "vite": "^7.2.2",
     "vite-plugin-pwa": "^1.1.0",
     "vue-loader": "^15.9.3",
-    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "vue": "^2.7.16"
+    "@vitejs/plugin-vue": "^6.0.1",
+    "vue": "^3.5.24"
   }
 }
